local_modules/dochandler/src/parser-doobdoc-no-trace.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Content: peg$parseContent },
      peg$startRuleFunction  = peg$parseContent,

      peg$c0 = function(text) { return { type: "Text", text: text, location: locationAdjusted() } },
      peg$c1 = function(tag) { return { ...tag, source:text() } },
      peg$c2 = /^[a-zA-Z0-9_]/,
      peg$c3 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c4 = /^[a-zA-Z0-9_.]/,
      peg$c5 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "."], false, false),
      peg$c6 = " ",
      peg$c7 = peg$literalExpectation(" ", false),
      peg$c8 = /^[ \t]/,
      peg$c9 = peg$classExpectation([" ", "\t"], false, false),
      peg$c10 = /^[ \t\r\n]/,
      peg$c11 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c12 = "[",
      peg$c13 = peg$literalExpectation("[", false),
      peg$c14 = "]",
      peg$c15 = peg$literalExpectation("]", false),
      peg$c16 = "(",
      peg$c17 = peg$literalExpectation("(", false),
      peg$c18 = ")",
      peg$c19 = peg$literalExpectation(")", false),
      peg$c20 = ":",
      peg$c21 = peg$literalExpectation(":", false),
      peg$c22 = ",",
      peg$c23 = peg$literalExpectation(",", false),
      peg$c24 = ", ...",
      peg$c25 = peg$literalExpectation(", ...", false),
      peg$c26 = "name",
      peg$c27 = peg$literalExpectation("name", true),
      peg$c28 = "path",
      peg$c29 = peg$literalExpectation("path", true),
      peg$c30 = "example",
      peg$c31 = peg$literalExpectation("example", true),
      peg$c32 = "page",
      peg$c33 = peg$literalExpectation("page", true),
      peg$c34 = "property",
      peg$c35 = peg$literalExpectation("property", true),
      peg$c36 = "method",
      peg$c37 = peg$literalExpectation("method", true),
      peg$c38 = "link",
      peg$c39 = peg$literalExpectation("link", true),
      peg$c40 = "member",
      peg$c41 = peg$literalExpectation("member", true),
      peg$c42 = "param",
      peg$c43 = peg$literalExpectation("param", true),
      peg$c44 = ".js",
      peg$c45 = peg$literalExpectation(".js", false),
      peg$c46 = function(link) {

      	return { type: 'ExampleTag', link:link, title:link, location: locationAdjusted() }

      },
      peg$c47 = /^[:\/\-]/,
      peg$c48 = peg$classExpectation([":", "/", "-"], false, false),
      peg$c49 = function(link, title) {

      	return { type: 'ExampleTag', link:link, title:normalizeWS( title ), location: locationAdjusted() }

      },
      peg$c50 = function(url) {

      	return { type: 'LinkTag', url:url.join(""), location: locationAdjusted() }

      },
      peg$c51 = function(url, text) {

      	return { type: 'LinkTag', url:url, text:normalizeWS( text ), location: locationAdjusted() }

      },
      peg$c52 = /^[:\/\-()#=]/,
      peg$c53 = peg$classExpectation([":", "/", "-", "(", ")", "#", "="], false, false),
      peg$c54 = function() {
      	return { type: 'PathTag', location: locationAdjusted() }
      },
      peg$c55 = function(name) {

      	const match = name.match( /^(\w+)\.(.*?)$/i );

          let main, anchor, extra;
          if ( match !== null ) {
          	main = match[ 1 ];
              anchor = match[ 2 ];
      		extra = { name:main };
          } else if ( name.startsWith( '.' ) === true ) {
              anchor = name.replace( /^\./, '' );
      		extra = {};
          } else {
          	main = name;
      		anchor = '';
      		extra = { name:main };
          }

      	return { type: 'PageTag', anchor:anchor, text:name, location: locationAdjusted(), ...extra };

      },
      peg$c56 = ".",
      peg$c57 = peg$literalExpectation(".", false),
      peg$c58 = function(anchor, text) {

      	return { type: 'PageTag', name:documentName, anchor:anchor.replace( /^\./, '' ), text:normalizeWS( text ), location: locationAdjusted() }

      },
      peg$c59 = function(name, text) {

      	const match = name.match( /^(\w+)\.(.*?)$/i );

          let main, anchor;
          if ( match !== null ) {
          	main = match[ 1 ];
              anchor = match[ 2 ];
          } else {
          	main = name;
      		anchor = '';
          }

      	return { type: 'PageTag', name:main, anchor:anchor, text:normalizeWS( text ), location: locationAdjusted() }

      },
      peg$c60 = function(retval) {

      	return { type: 'ParamTag', retval:retval, location: locationAdjusted() }

      },
      peg$c61 = function(retval, name) {

      	return { type: 'ParamTag', retval:retval, name:normalizeWS( name ), location: locationAdjusted() }

      },
      peg$c62 = function(tag, name) {

          return { type: tag[0].toUpperCase() + tag.slice(1) + 'Tag', name:name, retval:name, location: locationAdjusted() }

      },
      peg$c63 = function(tag, retval, name, params) {

          if ( params !== null )
              params = params.filter( x => x !== "(" && x !== ")" )[ 0 ];

          return { type: tag[0].toUpperCase() + tag.slice(1) + 'Tag', retval:retval, name:normalizeWS( name ), params:params, location: locationAdjusted() }

      },
      peg$c64 = function(tag) {

      	return tag

      },
      peg$c65 = function(tag) {

      	return { type: 'ParamTag', retval:undefined, name:tag, location: locationAdjusted() }

      },
      peg$c66 = function() {

      	return { type: 'NameTag', location: locationAdjusted() }

      },
      peg$c67 = function(params) {

          if ( params !== null )
              params = params.filter( x => x !== "(" && x !== ")" )[ 0 ];

      	return { type: 'Constructor', params:params, location: locationAdjusted() }

      },
      peg$c68 = "<",
      peg$c69 = peg$literalExpectation("<", false),
      peg$c70 = ">",
      peg$c71 = peg$literalExpectation(">", false),
      peg$c72 = "/",
      peg$c73 = peg$literalExpectation("/", false),
      peg$c74 = "code",
      peg$c75 = peg$literalExpectation("code", true),
      peg$c76 = /^[^<]/,
      peg$c77 = peg$classExpectation(["<"], true, false),
      peg$c78 = /^[^>]/,
      peg$c79 = peg$classExpectation([">"], true, false),
      peg$c80 = /^[^\]]/,
      peg$c81 = peg$classExpectation(["]"], true, false),
      peg$c82 = /^[^[<]/,
      peg$c83 = peg$classExpectation(["[", "<"], true, false),
      peg$c84 = /^[^\/]/,
      peg$c85 = peg$classExpectation(["/"], true, false),
      peg$c86 = peg$anyExpectation(),
      peg$c87 = function(code) {

      	return { type: "CodeTag", code, location: locationAdjusted() };

      },
      peg$c88 = function(tag) {

      	return { type: "NonCodeTag", tag };

      },
      peg$c89 = function(tag) {

      	return { type: "NonBracketsTag", tag };

      },
      peg$c90 = function(text) {

      	return { type: "Text", text, location: locationAdjusted() };

      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseContent() {
    var s0, s1, s2, s3, s4;

    s0 = [];
    s1 = peg$parseTags();
    if (s1 === peg$FAILED) {
      s1 = peg$parseCodeTag();
    }
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      s2 = peg$currPos;
      s3 = [];
      s4 = peg$parseNonCodeTag();
      if (s4 === peg$FAILED) {
        s4 = peg$parseNonBracketsTag();
        if (s4 === peg$FAILED) {
          s4 = peg$parseText();
        }
      }
      if (s4 !== peg$FAILED) {
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseNonCodeTag();
          if (s4 === peg$FAILED) {
            s4 = peg$parseNonBracketsTag();
            if (s4 === peg$FAILED) {
              s4 = peg$parseText();
            }
          }
        }
      } else {
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s2 = input.substring(s2, peg$currPos);
      } else {
        s2 = s3;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c0(s2);
      }
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseTags();
        if (s1 === peg$FAILED) {
          s1 = peg$parseCodeTag();
        }
        if (s1 === peg$FAILED) {
          s1 = peg$currPos;
          s2 = peg$currPos;
          s3 = [];
          s4 = peg$parseNonCodeTag();
          if (s4 === peg$FAILED) {
            s4 = peg$parseNonBracketsTag();
            if (s4 === peg$FAILED) {
              s4 = peg$parseText();
            }
          }
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseNonCodeTag();
              if (s4 === peg$FAILED) {
                s4 = peg$parseNonBracketsTag();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseText();
                }
              }
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s2 = input.substring(s2, peg$currPos);
          } else {
            s2 = s3;
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s1;
            s2 = peg$c0(s2);
          }
          s1 = s2;
        }
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTags() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseNameTag();
    if (s1 === peg$FAILED) {
      s1 = peg$parseConstructor();
      if (s1 === peg$FAILED) {
        s1 = peg$parsePathTag();
        if (s1 === peg$FAILED) {
          s1 = peg$parsePageTag();
          if (s1 === peg$FAILED) {
            s1 = peg$parseLinkTag();
            if (s1 === peg$FAILED) {
              s1 = peg$parseMPMTag();
              if (s1 === peg$FAILED) {
                s1 = peg$parseExampleTag();
                if (s1 === peg$FAILED) {
                  s1 = peg$parseParamTag();
                }
              }
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseRxW() {
    var s0;

    if (peg$c2.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }

    return s0;
  }

  function peg$parseRxWDot() {
    var s0;

    if (peg$c4.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parseSP() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c6;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }

    return s0;
  }

  function peg$parseWS() {
    var s0;

    if (peg$c8.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }

    return s0;
  }

  function peg$parseWSLB() {
    var s0;

    if (peg$c10.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }

    return s0;
  }

  function peg$parseOPB() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 91) {
      s0 = peg$c12;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }

    return s0;
  }

  function peg$parseCLB() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 93) {
      s0 = peg$c14;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }

    return s0;
  }

  function peg$parseOPP() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 40) {
      s0 = peg$c16;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }

    return s0;
  }

  function peg$parseCLP() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 41) {
      s0 = peg$c18;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }

    return s0;
  }

  function peg$parseCOLON() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 58) {
      s0 = peg$c20;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c21); }
    }

    return s0;
  }

  function peg$parseCOMMA() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 44) {
      s0 = peg$c22;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c23); }
    }

    return s0;
  }

  function peg$parseCOMMADOTS() {
    var s0;

    if (input.substr(peg$currPos, 5) === peg$c24) {
      s0 = peg$c24;
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c25); }
    }

    return s0;
  }

  function peg$parseLBLName() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c26) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c27); }
    }

    return s0;
  }

  function peg$parseLBLPath() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c28) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c29); }
    }

    return s0;
  }

  function peg$parseLBLExample() {
    var s0;

    if (input.substr(peg$currPos, 7).toLowerCase() === peg$c30) {
      s0 = input.substr(peg$currPos, 7);
      peg$currPos += 7;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c31); }
    }

    return s0;
  }

  function peg$parseLBLPage() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c32) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c33); }
    }

    return s0;
  }

  function peg$parseLBLProperty() {
    var s0;

    if (input.substr(peg$currPos, 8).toLowerCase() === peg$c34) {
      s0 = input.substr(peg$currPos, 8);
      peg$currPos += 8;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c35); }
    }

    return s0;
  }

  function peg$parseLBLMethod() {
    var s0;

    if (input.substr(peg$currPos, 6).toLowerCase() === peg$c36) {
      s0 = input.substr(peg$currPos, 6);
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c37); }
    }

    return s0;
  }

  function peg$parseLBLLink() {
    var s0;

    if (input.substr(peg$currPos, 4).toLowerCase() === peg$c38) {
      s0 = input.substr(peg$currPos, 4);
      peg$currPos += 4;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c39); }
    }

    return s0;
  }

  function peg$parseLBLMember() {
    var s0;

    if (input.substr(peg$currPos, 6).toLowerCase() === peg$c40) {
      s0 = input.substr(peg$currPos, 6);
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c41); }
    }

    return s0;
  }

  function peg$parseLBLParam() {
    var s0;

    if (input.substr(peg$currPos, 5).toLowerCase() === peg$c42) {
      s0 = input.substr(peg$currPos, 5);
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c43); }
    }

    return s0;
  }

  function peg$parseTAGName() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseOPB();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLBLName();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCLB();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTAGPath() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseOPB();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLBLPath();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCLB();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSTARTExample() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseOPB();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLBLExample();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCOLON();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSTARTPage() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseOPB();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLBLPage();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCOLON();
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
